--- a/drive/templates/signup.html
+++ b/drive/templates/signup.html
@@ -9,11 +9,10 @@
     {% if wrong_time %}
     <div class="jumbotron">
         <h1>Запись окончена </h1>
-        <p>Сейчас {{current_time}}!!!</p>
-        <p>Запись на развозку у нас с 9:00 до 19:00, у тебя было сраных 10 часов, чтобы подумать об этом.</p>
+        <p>Сейчас {{current_time}}!</p>
+        <p>Запись на развозку производится с 9:00 до 19:00, у тебя было 10 часов, чтобы подумать об этом.</p>
         <p>На сегодня запись закончена, ищи себя в списках, если успел записаться.</p>
-        <p>Если не успел - сам виноват. Пидорь пешком.</p>
-        </p>
+        <p>Если не успел, тебя ждет увлекательная прогулка пешком до дома.</p>
     </div>
     {% else %}
 
