--- a/templates/main.html
+++ b/templates/main.html
@@ -15,10 +15,12 @@
 <body>
 <div class="container">
 
-
     <div class="section-title">
-        <div>
-            <a>Сетевые подключеня</a>
+        <div class="title-container">
+            <div class="title-menu-elem"><a href="http://karimov-nn" target="_blank">Информационный портал</a></div>
+            <div class="title-menu-elem"><a href="#" target="_blank">Ссылка номер два</a></div>
+            <div class="title-menu-elem"><a href="#">Оставить отзыв создателю</a></div>
+            <div class="title-menu-whitespace"></div>
         </div>
     </div>
 
@@ -54,7 +56,9 @@
 
         <div class="variant_navigation">
 
-            <div class="reserved_cell"></div>
+            <div class="start_again">
+                  <a href="#" onclick="return false"><img src="{% static '/static/static/templates/warning.png' %}" class="img"></a>
+            </div>
 
             <div class="go_prev_state">
                 <img src="{% static '/static/static/templates/arrow_left.png' %}" class="img">
