admin views, lots of frontend adds

--- a/clickerApp/templates/IndexView.html
+++ b/clickerApp/templates/IndexView.html
@@ -68,6 +68,8 @@
         <div class="variant">
             <hr>
 
+            <div class="not_visible hidden_comment">{{state.hidden_comment}}</div>
+
             <div class="var-name">{{state.state_title}}</div>
 
             <div class="var-description">{{state.variant_description|safe}}</div>
@@ -136,6 +138,9 @@
 
         <div class="variant">
             <hr>
+
+            <div class="not_visible hidden_comment">{{state.hidden_comment}}</div>
+
             <div class="var-name">{{state.state_title}}</div>
             <hr>
             <div class="var-description">
