--- a/templates/main.html
+++ b/templates/main.html
@@ -57,7 +57,7 @@
         <div class="variant_navigation">
 
             <div class="start_again">
-                  <a href="#" onclick="return false"><img src="{% static '/static/static/templates/warning.png' %}" class="img"></a>
+                  <a onclick="return false"><img src="{% static '/static/static/templates/warning.png' %}" class="img"></a>
             </div>
 
             <div class="go_prev_state">
