To many new features

--- a/clickerApp/templates/clicker_content.html
+++ b/clickerApp/templates/clicker_content.html
@@ -1,5 +1,7 @@
-{%extends 'main.html' %}
+{%extends 'clicker_container.html' %}
 <!--- {% load staticfiles %} --->
+
+
 
 
 {% block file_manager %}
