--- a/loginsys/templates/restore.html
+++ b/loginsys/templates/restore.html
@@ -1,4 +1,4 @@
-{% extends 'drive_main.html' %}
+{% extends 'loginsys_main.html' %}
 {% block restore %}
 
 <form action="/auth/restore/" method="post">
