--- a/drive/templates/drive_main.html
+++ b/drive/templates/drive_main.html
@@ -28,7 +28,11 @@
     <div id="navbarCollapse" class="collapse navbar-collapse">
 
         <ul class="nav navbar-nav">
-            <li><a href="/drive/">Главная</a></li>
+            <li><a href="/">Главная</a></li>
+
+            <li><a href="/drive/">Развозка сегодня</a></li>
+
+
             {% if username %}
                 <li>
                     <a href="/drive/signup/">Записаться</a>
@@ -68,12 +72,14 @@
 <script src='{% static "static/templates/functions.js" %}'></script>
 
 <div>
-    {% block login %}{% endblock %}
-    {% block drive_list %}{% endblock %}
-    {% block signup %}{% endblock %}
-    {% block my_drive_list %}{% endblock %}
-    {% block drive_history %}{% endblock %}
-    {% block drive_error %}{% endblock %}
+    <div class="container">
+        {% block login %}{% endblock %}
+        {% block drive_list %}{% endblock %}
+        {% block signup %}{% endblock %}
+        {% block my_drive_list %}{% endblock %}
+        {% block drive_history %}{% endblock %}
+        {% block drive_error %}{% endblock %}
+    </div>
 </div>
 </body>
 </html>
