--- a/drive/templates/history.html
+++ b/drive/templates/history.html
@@ -1,3 +1,111 @@
+{% extends 'drive_main.html' %}
+
 {% block drive_history %}
+
+
+<div class="row">
+
+    <div class="page-header">
+            <h1>История развозок</h1>
+        </div>
+
+    <div class="col-md-3">
+
+        <div class="page-header">
+            <h2>Выбор даты:</h2>
+        </div>
+
+        <form method="post" action="/drive/history/">
+
+            <div class="form-group">
+                <div class="input-group date" id="datetimepicker1">
+
+                    <input name="search_date"
+                           type="text"
+                           class="form-control"
+                           value="{% if search_date != None %}{{search_date|date:"d.m.Y"}}{% endif %}"
+                    />
+
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+
+            <br>
+
+            <button type="submit" class="btn btn-success form-control">Запросить</button>
+
+        </form>
+
+    </div>
+
+    <div class="col-md-9">
+
+        <div class="page-header">
+            <h2>Результаты поиска{% if search_date != None %} за {{search_date}}{% endif %}:</h2>
+        </div>
+
+
+
+
+    {% for time_variant in drive_time_variants %}
+
+        <div class="page-header">
+            <h3>Список уезжающих в {{ time_variant }}</h3>
+        </div>
+
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>
+                    Подразделение:
+                </th>
+                <th>
+                    Оператор:
+                </th>
+                <th>
+                    Район:
+                </th>
+                <th>
+                    Адрес:
+                </th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for note in registered_notes %}
+                {% if note.drive_time == time_variant %}
+                    <tr>
+                        <td>
+                            {{ note.department }}
+                        </td>
+                        <td>
+                            {{ note.address.operator }}
+                        </td>
+                        <td>
+                            {{ note.address.area.name }}
+                        </td>
+                        <td>
+                            {{ note.address.address }}
+                        </td>
+                    </tr>
+                {% endif %}
+
+            {% endfor %}
+            </tbody>
+        </table>
+
+        <hr>
+    {% endfor %}
+
+
+
+
+    </div>
+
+    </div>
+
+
+
 
 {% endblock %}
