--- a/static/templates/style.css
+++ b/static/templates/style.css
@@ -612,15 +612,102 @@ display:table-cell;
 
 .start_again img:hover{
     width: 72px;
- }
+}
 
 .start_again img:active{
-    width: 71px;
- }
+   width: 71px;
+}
 
- .start_again img{
-    width: 70px;
-    box-sizing: border-box;
-    vertical-align:bottom;
-    cursor: pointer;
+.start_again img{
+   width: 70px;
+   box-sizing: border-box;
+   vertical-align:bottom;
+   cursor: pointer;
+}
+
+
+
+
+
+
+
+
+.schema-table{
+    padding:0!important;
+    margin:0px!important;
+    border-collapse:separate !important;
+    border-spacing: 1px;
+}
+
+.schema-table > tbody > tr > td{
+    padding-left:0px!important;
+    padding-right:0px!important;
+    padding-top:5px!important;
+    padding-bottom:5px!important;
+
+}
+
+
+.wrap-container {
+	overflow-x: auto;
+	overflow-y: auto;
+}
+
+.schema-container{
+    width:100%;
+    height:100%;
+}
+
+.schema-container table {
+	min-width: 100%;
+	padding: 0;
+
+}
+
+/*теги вариантов*/
+.variant{
+    display:inline-block;
+	margin:3px;
+	white-space: normal;
+	text-align:left;
+	vertical-align:middle;
+}
+
+.state_item{
+   display:inline-block;
+   text-align:center;
+   min-width:80px;
+   max-width:100px;
+   min-height:80px;
+}
+
+
+.item_id{
+   display:none;
+}
+
+.parent_id{
+   display:none;
+}
+
+.item_title{
+   border:1px solid black;
+   padding:5px;
+   display:run-in;
+   width:100%;
+}
+
+.item_move{
+   border:1px solid black;
+   padding:5px;
+   display:run-in;
+   height:100%;
+}
+
+
+
+
+
+ .item_news_form {
+    max-height:100px;
  }
