To many new features

--- a/clickerApp/templates/clicker_index.html
+++ b/clickerApp/templates/clicker_index.html
@@ -15,7 +15,7 @@
 <body>
 
 
-<nav role="navigation" class="navbar navbar-default" ">
+<nav role="navigation" class="navbar navbar-default">
     <div class="navbar-header">
         <a href="#" class="navbar-brand">Интерактивная диагностика</a>
     </div>
