--- a/news/templates/news_form.html
+++ b/news/templates/news_form.html
@@ -38,9 +38,9 @@
         <td>
             <div>
                 <h3>
-                    <div class="news_title">Это длинный тестовый заголовок, чтобы понять, на что мы вообще способны.
+                    <small class="pull-right news_date">19 мая 2016г. 15:35</small><br>
+                    <div class="news_title">Это длинный тестовый заголовок, чтобы понять, на что мы вообще способны. А способны мы на многое!
                     </div>
-                    <small class="pull-right news_date">19 мая 2016г. 15:35</small>
                 </h3>
             </div>
             <span class="news_body_path">Будет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек. Будет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек.Будет сложно закончить этот проект, не превратив новостную ленту в свой милый бложек.</span>
