--- a/drive/templates/drive_main.html
+++ b/drive/templates/drive_main.html
@@ -7,6 +7,7 @@
     <title>Развозка</title>
     <link rel="shortcut icon" href="{% static 'static/templates/favicon.png' %}"/>
     <link rel="stylesheet" type="text/css" href='{% static "static/templates/bootstrap/css/bootstrap.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "static/templates/bootstrap/css/bootstrap-datetimepicker.min.css" %}'>
     <style>
         .helptext{
             display:none;
@@ -68,8 +69,11 @@
 
 
 <script src='{% static "static/templates/jquery.min.js" %}'></script>
+<script src='{% static "static/templates/moment-with-locales.min.js" %}'></script>
 <script src='{% static "static/templates/bootstrap/js/bootstrap.min.js" %}'></script>
+<script src='{% static "static/templates/bootstrap/js/bootstrap-datetimepicker.min.js" %}'></script>
 <script src='{% static "static/templates/functions.js" %}'></script>
+
 
 <div>
     <div class="container">
