To many new features

--- a/clickerApp/templates/clicker_schema.html
+++ b/clickerApp/templates/clicker_schema.html
@@ -7,6 +7,7 @@
     .container{
         width:95%!important;
         padding:0!important;
+
         height: 78vh; /* 100vh - 100% от высоты viewport(окна браузера) */
     }
 
@@ -39,6 +40,21 @@
 
             <td colspan="{{state.state_width}}" rowspan="{{state.cell_rowspan}}" style="text-align:center!important;">
 
+                {% if forloop.first and forloop.counter != forloop.revcounter %}
+                    <div style="display:inline-block; width:50%; border-right:1px solid black; height:20px;"></div><div style="  height:20px; display:inline-block; width:50%; border-top:1px solid black;"></div>
+                {% else %}
+                    {% if forloop.last and forloop.counter != forloop.revcounter %}
+                        <div style="  height:20px; display:inline-block; width:50%; border-top:1px solid black;"></div><div style="  height:20px; display:inline-block; width:50%; border-left:1px solid black;"></div>
+                    {% else %}
+                        {% if forloop.counter != forloop.revcounter or  forloop.counter > 1%}
+                            <div style="  height:20px; display:inline-block; width:50%; border-top:1px solid black; border-right:1px solid black;"></div><div style="  height:20px; display:inline-block; width:50%; border-top:1px solid black;"></div>
+                        {% endif %}
+                    {% endif %}
+                {% endif %}
+
+
+
+
 
         <div class="state_item">
 
@@ -54,10 +70,18 @@
 
 
 
+
+
+
+                {% if state.cell_rowspan == 1 and forloop.parentloop.revcounter != 1 %}
+                    <br>
+                    <div style="display:inline-block; width:50%; border-right:1px solid black; height:20px;"></div><div style="height:20px; display:inline-block; width:50%;"></div>
+                {% endif %}
                 </td>
         {% endfor %}
-
         </tr>
+
+
 
 
 
@@ -73,7 +97,5 @@
 
 
 {% block schema_script %}
-    <script>
-        buildSchema();
-    </script>
+
 {% endblock %}
