--- a/feedback/templates/feedback_form_for_creator.html
+++ b/feedback/templates/feedback_form_for_creator.html
@@ -13,14 +13,14 @@
 </form>
 
 <div id="feedback_form_error_length"
-     class="alert alert-danger alert-dismissable feedback_creator_form_messages">
+     class="alert alert-danger alert-dismissable feedback_creator_form_messages" style="display:none;">
     <strong>Ошибка!</strong>
     <hr>
     <p>Заполните поле комментария более подробно!</p>
 </div>
 
 <div id="feedback_form_error_unknown"
-     class="alert alert-danger alert-dismissable feedback_creator_form_messages">
+     class="alert alert-danger alert-dismissable feedback_creator_form_messages" style="display:none;">
     <strong>Ошибка!</strong>
     <hr>
     <p>Неизвестная ошибка. Попробуйте перезагрузить страницу.</p>
