--- a/feedback/templates/feedback_view_for_creator.html
+++ b/feedback/templates/feedback_view_for_creator.html
@@ -4,53 +4,26 @@
 
 <div class="col-md-4">
     <ul id="user_list_menu" class="nav nav-tabs nav-stacked nav_tabs_stacked">
-        <li class="" id="user_id_12">
-            <a href="#">
-                <span class="badge">18</span>
-                <span class="pull-center">Никто</span>
+    {% for address in address_list %}
+         <li id="user_id_{{address.from_user}}" class="{% if address.user == target_user%} active {% endif %}">
+            <a href="/feedback/show/?usr={{address.from_user}}">
+                <span class="badge">{{address.message_count}}</span>
+                <span class="pull-center">{{ address.user.username }}</span>
                 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
             </a>
         </li>
-        <li class="" id="user_id_2">
-            <a href="#">
-                <span class="badge">18</span>
-                <span class="pull-center">Никто</span>
-                <span class="glyphicon glyphicon-chevron-right pull-right"></span>
-            </a>
-        </li>
-        <li class="active" id="user_id_1">
-            <a href="#">
-                <span class="badge">18</span>
-                <span class="pull-center">admin</span>
-                <span class="glyphicon glyphicon-chevron-right pull-right"></span>
-            </a>
-        </li>
-        <li class="" id="user_id_13">
-            <a href="#">
-                <span class="badge">18</span>
-                <span class="pull-center">Никто</span>
-                <span class="glyphicon glyphicon-chevron-right pull-right"></span>
-            </a>
-        </li>
-        <li class="" id="user_id_16">
-            <a href="#">
-                <span class="badge">18</span>
-                <span class="pull-center">Никто</span>
-                <span class="glyphicon glyphicon-chevron-right pull-right"></span>
-            </a>
-        </li>
+    {% empty %}
+        <center><h6>Отзывов еще не было.</h6></center>
+    {% endfor %}
     </ul>
 </div>
 
 
 <div class="col-md-8">
+    <div class="feedback_chat_container">
     {% if not feedback_notes %}
-
         <center><h4>Когда-нибудь все будет работать, как должно.</h4></center>
-
-
     {% else %}
-
         <table id="feedback_history" class="table news_list">
             <tr>
                 <td>
@@ -60,10 +33,10 @@
 
             {% for note in feedback_notes %}
 
-            <tr {% if not note.has_been_read %} class="info" {% endif %} >
+            <tr class="{% if not note.has_been_read %}info{% endif %}" >
                 <td>
                     <div style="font-weight:bold!important">
-                        <div class="pull-left">from {{ note.from_user }}</div>
+                        <div class="pull-left">{{ note.from_user }}</div>
                         <div class="pull-right">{{ note.feedback_date|date:"d.m.Y"}}</div>
                         <br>
                         <div class="pull-right">{{ note.feedback_date|date:"h:i:s"}}</div>
@@ -79,6 +52,7 @@
 
         </table>
     {% endif %}
+    </div>
 </div>
 
 {% endblock %}
