--- a/news/templates/news_form.html
+++ b/news/templates/news_form.html
@@ -27,7 +27,7 @@
                 <div class="col-md-3">
                     <button type="button" class="remove_add_news_form_button btn btn-danger form-control"
                             style="margin-top: 20px;"><span
-                            class="glyphicon glyphicon-ok"></span> Отмена
+                            class="glyphicon glyphicon-remove"></span> Отмена
                     </button>
                 </div>
             </form>
