--- a/static/templates/style.css
+++ b/static/templates/style.css
@@ -171,7 +171,7 @@ display:none;
     position:absolute;
     width:882px;
     opacity:0.92;
-
+    z-index:1000;
 }
 
 .section-results{
@@ -216,6 +216,7 @@ width:882px;
     border-radius: 10px;
 	background-color:#eee;
 	text-align:center;
+	z-index:1000;
 
 }
 
@@ -571,7 +572,7 @@ width:882px;
 
 .mode_description_content img{
     max-width:335px;
-    margin-left:-19px;
+    //margin-left:-19px;
 }
 
 #again{
@@ -634,17 +635,23 @@ display:table-cell;
 
 .schema-table{
     padding:0!important;
-    margin:0px!important;
-    border-collapse:separate !important;
-    border-spacing: 1px;
+    margin:0!important;
+    //border-collapse:separate !important;
+    //border-spacing: 1px;
+    border-width:0!important;
+    padding:0!important;
+    margin:0!important;
 }
 
 .schema-table > tbody > tr > td{
-    padding-left:0px!important;
-    padding-right:0px!important;
-    padding-top:5px!important;
-    padding-bottom:5px!important;
+    padding:0!important;
+    margin:0!important;
+    border-width:0!important;
+    line-height:0!important;
+}
 
+.schema-table > tbody > tr > td > div{
+line-height: 1.42857143;
 }
 
 
@@ -660,7 +667,9 @@ display:table-cell;
 
 .schema-container table {
 	min-width: 100%;
-	padding: 0;
+	padding:0!important;
+    margin:0!important;
+	border-width:0!important;
 
 }
 
@@ -677,8 +686,9 @@ display:table-cell;
    display:inline-block;
    text-align:center;
    min-width:80px;
-   max-width:100px;
+   max-width:130px;
    min-height:80px;
+
 }
 
 
@@ -777,5 +787,49 @@ display:table-cell;
     padding-left:15px!important;
     padding-right:15px!important;
     border:1px solid #a94442!important;
-    display:none;
+    //display:none;
+}
+
+.news_list > tbody > tr > td{
+    word-wrap:break-word!important;
+    word-break: break-all!important;
+}
+
+.feedback_chat_container_creator{
+    overflow-y: auto;
+    width: 100%;
+    height: 43em;
+}
+
+.feedback_chat_container_user{
+    overflow-y: auto;
+    width: 100%;
+    height: 26.5em;
+    
+}
+
+
+.navbar-header{
+display:none!important;
+}
+
+
+
+.diamond {
+    width: 120px;
+    height: 120px;
+    background: #1eff00;
+/* Rotate */
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+/* Rotate Origin */
+    -webkit-transform-origin: 0 100%;
+    -moz-transform-origin: 0 100%;
+    -ms-transform-origin: 0 100%;
+    -o-transform-origin: 0 100%;
+    transform-origin: 0 100%;
+    margin: 60px 0 10px 310px;
 }
