--- a/static/templates/style.css
+++ b/static/templates/style.css
@@ -1,6 +1,7 @@
-body {
+html body {
 	padding:0!important;
 	margin:0!important;
+	height:100%;
 }
 
 hr{
@@ -270,8 +271,52 @@ width:882px;
 }
 
 
+.section-user-global-notes{
+    position:absolute;
+    left:895px;
+    top:415px;
+	padding:12px;
+	width:380px;
+	height:336px!important;
+	vertical-align:top;
+	text-align:center;
+	border-top:1px solid #aaa;
+	border-bottom:2px solid #aaa;
+	border-right:2px solid #aaa;
+	border-left:2px solid #aaa;
+	background-color:#eee;
+	border-radius: 0 10px 10px  0;
+}
 
+.section-state-user-notes{
+    position:absolute;
+    left:895px;
+	padding:12px;
+	width:380px;
+	height:335px!important;
+	vertical-align:top;
+	text-align:center;
+	border-top:1px solid #aaa;
+	border-bottom:1px solid #aaa;
+	border-right:2px solid #aaa;
+	border-left:2px solid #aaa;
+	background-color:#eee;
+	border-radius: 0 10px 10px  0;
+}
 
+#state_usernotes_form{
+    height: auto;
+    resize:none;
+    box-sizing: border-box;
+    margin-bottom:10px;
+}
+
+#global_usernotes_form{
+    height: auto;
+    resize:none;
+    box-sizing: border-box;
+    margin-bottom:10px;
+}
 
 
 /*Горизонтальный скроллер вариантов*/
@@ -279,6 +324,7 @@ width:882px;
 	width: 100%;
 	height: 370px;
 }
+
 .wrap-variants ul {
 	min-width: 100%;
 	padding: 0;
@@ -661,8 +707,7 @@ line-height: 1.42857143;
 }
 
 .schema-container{
-    width:100%;
-    height:100%;
+
 }
 
 .schema-container table {
@@ -801,12 +846,19 @@ line-height: 1.42857143;
     height: 43em;
 }
 
+.feedback_form_container_for_creator{
+    padding-bottom:90px;
+}
+
 .feedback_chat_container_user{
     overflow-y: auto;
     width: 100%;
     height: 26.5em;
     
 }
+
+
+
 
 
 .navbar-header{
